Added teacher sighup

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,14 @@
 	</head>
 	<body>
 		<h1>OnlineAssessment</h1>
+		<div class="col-6 text-right">
+              {% if user.is_authenticated %}
+                <p class="pt-3">Logged in as <strong>{{ user.username }}</strong>. <a href="{% url 'logout' %}">Log out</a>.</p>
+              {% else %}
+                <a href="{% url 'login' %}" class="btn btn-light" role="button">Log in</a>
+                <a href="{% url 'signup' %}" class="btn btn-primary" role="button">Sign up</a>
+              {% endif %}
+            </div>
 		{% block content %}
 		{% endblock %}
 	</body>
